WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
145601
[Streams API] ReadableJSStream does not need a ReadableStreamSource
https://bugs.webkit.org/show_bug.cgi?id=145601
Summary
[Streams API] ReadableJSStream does not need a ReadableStreamSource
youenn fablet
Reported
2015-06-03 03:05:29 PDT
ReadableStreamSource was added as a way to define a simple interface for native sources. This interface is not well suited to JS sources since the code needed to handle JS sources is scattered between ReadableJSStream and ReadableJSStream::Source. It may be best to remove ReadableStreamSource from ReadableStream and ReadableJSStream. We would then reintroduce it when supporting native streams as a member of a ReadableNativeStream. ReadableNativeStream would be the equivalent of ReadableJSStream for native sources.
Attachments
Patch
(17.56 KB, patch)
2015-06-03 03:18 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Patch for landing
(17.62 KB, patch)
2015-06-03 23:50 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2015-06-03 03:18:22 PDT
Created
attachment 254164
[details]
Patch
Darin Adler
Comment 2
2015-06-03 14:14:38 PDT
Comment on
attachment 254164
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=254164&action=review
> Source/WebCore/Modules/streams/ReadableStream.h:87 > + ReadableStream(ScriptExecutionContext&);
Should add explicit here.
youenn fablet
Comment 3
2015-06-03 23:50:30 PDT
Created
attachment 254255
[details]
Patch for landing
WebKit Commit Bot
Comment 4
2015-06-04 00:53:21 PDT
Comment on
attachment 254255
[details]
Patch for landing Clearing flags on attachment: 254255 Committed
r185196
: <
http://trac.webkit.org/changeset/185196
>
WebKit Commit Bot
Comment 5
2015-06-04 00:53:24 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug