[Streams API] ReadableJSStream does not need a ReadableStreamSource https://bugs.webkit.org/show_bug.cgi?id=145601

Reviewed by Darin Adler.

Covered by existing tests.

* Modules/streams/ReadableStream.cpp:
(WebCore::ReadableStream::ReadableStream): Remoed m_source.
* Modules/streams/ReadableStream.h: Ditto
* Modules/streams/ReadableStreamSource.h: Deleted.
* WebCore.vcxproj/WebCore.vcxproj: Removing Modules/streams/ReadableStreamSource.h.
* WebCore.vcxproj/WebCore.vcxproj.filters: Ditto.
* WebCore.xcodeproj/project.pbxproj: Ditto.
* bindings/js/ReadableJSStream.cpp:
(WebCore::ReadableJSStream::globalObject):
(WebCore::ReadableJSStream::doStart): Equivalent of ReadableJSStream::Source::start().
(WebCore::ReadableJSStream::create): Updated according new constructor.
(WebCore::ReadableJSStream::ReadableJSStream):
(WebCore::startReadableStreamAsync): Deleted.
(WebCore::ReadableJSStream::jsController): Deleted.
(WebCore::ReadableJSStream::storeError): Deleted.
* bindings/js/ReadableJSStream.h: Added m_source member to store the JS source as a JS object.


Canonical link: https://commits.webkit.org/163680@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@185196 268f45cc-cd09-0410-ab3c-d52691b4dbfc